--- a/index.html
+++ b/index.html
@@ -663,9 +663,16 @@
             </li>
           </ul>
         </div>
+        <div class="Subscribe-form">
+          <p>Subscribe</p>
+          <form class="footer-form">
+            <input type="email" class="footer-input" placeholder="E-mail" />
+            <button type="submit">Subscribe</button>
+          </form>
+        </div>
       </div>
     </footer>
-    <div class="backdrop is-open">
+    <div class="backdrop">
       <div class="modal">
         <button type="button" class="modal-btn">
           <svg class="modal-btn-icon" width="8" height="8">
@@ -718,14 +725,31 @@
               </svg>
             </div>
           </div>
-          <div class="modal-fiel">
+          <div class="modal-fiel-comment">
             <label for="user-text" class="modal-label">Comment</label>
             <textarea
               name="user-text"
               id="user-text"
               class="modal-text"
-              placeholder="Enter text"
+              placeholder="Text input"
             ></textarea>
+          </div>
+          <div class="modal-field">
+            <input
+              type="checkbox"
+              id="modal-check"
+              name="modal-check"
+              class="check-input visually-hidden"
+            />
+            <label for="modal-check" class="check-text">
+              <span
+                ><svg class="modal-check-icon" width="10" height="10">
+                  <use
+                    href="./images/icons.svg#icon-checkmark"
+                  ></use></svg></span
+              >I accept the terms and conditions of the&nbsp;
+              <a href="">Privacy Policy</a></label
+            >
           </div>
           <button type="submit" class="modal-sub-but">Send</button>
         </form>
