go-it-hw-5 ver3

--- a/index.html
+++ b/index.html
@@ -666,13 +666,27 @@
         <div class="Subscribe-form">
           <p>Subscribe</p>
           <form class="footer-form">
-            <input type="email" class="footer-input" placeholder="E-mail" />
-            <button type="submit">Subscribe</button>
+            <input
+              type="email"
+              class="footer-input"
+              placeholder="E-mail"
+              aria-label="email input"
+            />
+            <button type="submit" class="footer-form-btn">
+              Subscribe
+              <svg class="footer-btn-icon">
+                <use
+                  href="./images/icons.svg#icon-plane"
+                  width="24"
+                  height="24"
+                ></use>
+              </svg>
+            </button>
           </form>
         </div>
       </div>
     </footer>
-    <div class="backdrop is-open">
+    <div class="backdrop">
       <div class="modal">
         <button type="button" class="modal-btn">
           <svg class="modal-btn-icon" width="8" height="8">
