go-it-hw-5 ver5

--- a/index.html
+++ b/index.html
@@ -674,7 +674,7 @@
             />
             <button type="submit" class="footer-form-btn">
               Subscribe
-              <svg class="footer-btn-icon">
+              <svg class="footer-btn-icon" outline="">
                 <use
                   href="./images/icons.svg#icon-plane"
                   width="24"
@@ -686,7 +686,7 @@
         </div>
       </div>
     </footer>
-    <div class="backdrop">
+    <div class="backdrop is-open">
       <div class="modal">
         <button type="button" class="modal-btn">
           <svg class="modal-btn-icon" width="8" height="8">
