go-it-hw-5 ver.6

--- a/index.html
+++ b/index.html
@@ -674,7 +674,7 @@
             />
             <button type="submit" class="footer-form-btn">
               Subscribe
-              <svg class="footer-btn-icon" outline="">
+              <svg class="footer-btn-icon">
                 <use
                   href="./images/icons.svg#icon-plane"
                   width="24"
