--- a/index.html
+++ b/index.html
@@ -663,18 +663,21 @@
             </li>
           </ul>
         </div>
-        <div class="Subscribe-form">
-          <p>Subscribe</p>
+        <div class="subscribe-form">
+          <p class="subscribe-text">Subscribe</p>
           <form class="footer-form">
-            <input
-              type="email"
-              class="footer-input"
-              placeholder="E-mail"
-              aria-label="email input"
-            />
+            <label for="email" class="footer-form-label">
+              <input
+                class="footer-form-input"
+                type="email"
+                placeholder="E-mail"
+                aria-label="email input"
+                id="email"
+              />
+            </label>
             <button type="submit" class="footer-form-btn">
               Subscribe
-              <svg class="footer-btn-icon">
+              <svg class="footer-btn-icon" width="24" height="24">
                 <use
                   href="./images/icons.svg#icon-plane"
                   width="24"
@@ -706,7 +709,7 @@
                 class="modal-input"
                 id="user-name"
               />
-              <svg class="modal-icon" width="18" height="18">
+              <svg class="modal-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-person"></use>
               </svg>
             </div>
@@ -720,7 +723,7 @@
                 class="modal-input"
                 id="user-phone"
               />
-              <svg class="modal-icon" width="18" height="18">
+              <svg class="modal-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-phone"></use>
               </svg>
             </div>
@@ -734,16 +737,16 @@
                 class="modal-input"
                 id="user-email"
               />
-              <svg class="modal-icon" width="18" height="18">
+              <svg class="modal-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-email"></use>
               </svg>
             </div>
           </div>
           <div class="modal-fiel-comment">
-            <label for="user-text" class="modal-label">Comment</label>
+            <label for="user-comment" class="modal-label">Comment</label>
             <textarea
-              name="user-text"
-              id="user-text"
+              name="user-comment"
+              id="user-comment"
               class="modal-text"
               placeholder="Text input"
             ></textarea>
@@ -751,18 +754,19 @@
           <div class="modal-field">
             <input
               type="checkbox"
-              id="modal-check"
-              name="modal-check"
+              id="user-privacy"
+              name="user-privacy"
+              value="true"
               class="check-input visually-hidden"
             />
-            <label for="modal-check" class="check-text">
-              <span
-                ><svg class="modal-check-icon" width="10" height="10">
+            <label for="user-privacy" class="check-text">
+              <span class="check-text-span">
+                <svg class="modal-check-icon" width="8" height="8">
                   <use
                     href="./images/icons.svg#icon-checkmark"
                   ></use></svg></span
               >I accept the terms and conditions of the&nbsp;
-              <a href="">Privacy Policy</a></label
+              <a class="privacy-ref" href="">Privacy Policy</a></label
             >
           </div>
           <button type="submit" class="modal-sub-but">Send</button>
