go-it-hw-5 ver.8

--- a/index.html
+++ b/index.html
@@ -668,6 +668,7 @@
           <form class="footer-form">
             <label for="email" class="footer-form-label">
               <input
+                name="email"
                 class="footer-form-input"
                 type="email"
                 placeholder="E-mail"
@@ -761,7 +762,7 @@
             />
             <label for="user-privacy" class="check-text">
               <span class="check-text-span">
-                <svg class="modal-check-icon" width="8" height="8">
+                <svg class="modal-check-icon" width="10" height="8">
                   <use
                     href="./images/icons.svg#icon-checkmark"
                   ></use></svg></span
